sesion4/admin-ene-2023/istio/01-tf/02-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notificationservice
  namespace: ns-aforo255
spec:
  hosts:
  - notificationservice
  http:
  - route:
    - destination:
        host: notificationservice
        subset: version-v1
      weight: 90
    - destination:
        host: notificationservice
        subset: version-v2
      weight: 10
